# sharemem

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  ngx_rbtree.h  ngx_rwlock.c  ngx_shmem.c  ngx_shmem.h  ngx_shmtx.c  ngx_shmtx.h  ngx_slab.c  ngx_slab.h  ngx_spinlock.c  test_metux.c
src/shmem/: ngx_shmem.h
test/: test.c
